adding cloud-dev with GCS

--- a/rubyllm_chat_app/config/database.yml
+++ b/rubyllm_chat_app/config/database.yml
@@ -20,6 +20,9 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 
+cloud-dev:
+  url: <%= ENV["DATABASE_URL"] %>
+
 development:
   url: <%= ENV["DATABASE_URL"] %>
   primary: &primary_production
