fix(cors): Add rack-cors to fix CORS errors

--- a/rubyllm_chat_app/Gemfile
+++ b/rubyllm_chat_app/Gemfile
@@ -104,3 +104,5 @@ gem "dotenv-rails", "~> 3.1"
 
 gem "kramdown"
 gem "kramdown-parser-gfm" # For GitHub Flavored Markdown support
+
+gem "rack-cors"
