setting up default DB ~URL

--- a/rubyllm_chat_app/config/database.yml
+++ b/rubyllm_chat_app/config/database.yml
@@ -24,7 +24,7 @@ cloud-dev:
   url: <%= ENV["DATABASE_URL"] %>
 
 development:
-  url: <%= ENV["DATABASE_URL"] %>
+  url: <%= ENV.fetch "DATABASE_URL", "sqlite3://#{File.expand_path("../db/development.sqlite3", __dir__)}" %>
   primary: &primary_production
     <<: *default
     url: <%= ENV["DATABASE_URL"] %>
