--- a/.env.dist
+++ b/.env.dist
@@ -1,19 +1,18 @@
 
 GEMINI_API_KEY=''
-DATABASE_URL="sqlite3://db/development.sqlite3"
+DATABASE_URL="sqlite3:db/development.sqlite3"
+# Better: use a absolute path like this:
+#    export DATABASE_URL="sqlite3:///home/you/myapp/db/development.sqlite3"
+# note the THREE slashes for absolute path
+
 REGION='europe-west1'
 PORT='8080'
-
-
 WORKSHOP_ENVIRONMENT='dot_env'
 
 
-
-
-
-
-
-
+## Playwright user/pass - create it if you need it to connect with authentication.
+PLAYWRIGHT_USERNAME="your-playwright-email@example.com"
+PLAYWRIGHT_PASSWORD="y0ur-pl4ywright-P455w0rd"
 
 
 
