adding httpx client in case someone wants to make HTTP requests

--- a/rubyllm_chat_app/Gemfile
+++ b/rubyllm_chat_app/Gemfile
@@ -64,6 +64,8 @@ end
 gem "rack-cors"
 gem "fast-mcp", "~> 1.4"
 
+gem "httpx"
+
 group :development do
   # Use sqlite as the database for Active Record
   gem "sqlite3"
